--- a/PathFinder/HommFinder/HommFinder.csproj
+++ b/PathFinder/HommFinder/HommFinder.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HoMM">
+      <HintPath>..\Client\Binaries\Dlc\Assemblies\HoMM.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
