--- a/PathFinder/Client/homm.client/Homm.Client.csproj
+++ b/PathFinder/Client/homm.client/Homm.Client.csproj
@@ -53,7 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\ActionManager.cs" />
-    <Compile Include="Converter\Converter.cs" />
+    <Compile Include="Helpers\Converter.cs" />
+    <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Homm.Client.Program.cs" />
     <Compile Include="Interfaces\IOutPutPrinter.cs" />
     <Compile Include="OutputPrinter\CmdOutPutPrinter.cs" />
