ObjectCellType call implementation

--- a/PathFinder/HommFinder/HommFinder.csproj
+++ b/PathFinder/HommFinder/HommFinder.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Cell.cs" />
     <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Finder.cs" />
+    <Compile Include="ObjectCellType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
