CellType incorrect select fix

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ ModelManifest.xml
 *.txt
 *.cvarcreplay
 /PathFinder/Client/Binaries/2017-03-31_002420
+/PathFinder/Client/Binaries/2017-04-03_015602
